apps/semsearch/deployment/semsearch-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: semsearch
  labels:
    name: semsearch
