apps/semsearch/deployment/semsearch-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: semsearch-clip-milvus-redis-pg
  name: semsearch-clip-milvus-redis-pg
  namespace: semsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: semsearch-clip-milvus-redis-pg
  strategy: {}
  template:
    metadata:
      labels:
        app: semsearch-clip-milvus-redis-pg
    spec:
      containers:
        - args:
            - bash
            - -c
            - make run-service-development
          image: arylwen/semsearch-clip-milvus-redis-pg-k8s:latest
          name: semsearch-clip-milvus-redis-pg-k8s
          ports:
            - containerPort: 5000
          resources: {}
      restartPolicy: Always
status: {}
