apps/semsearch/deployment/semsearch-ui-deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  labels:
    app: semsearch-ui
  name: semsearch-ui 
  namespace: semsearch
spec: 
  replicas: 1
  selector:
    matchLabels: 
      app: semsearch-ui
  strategy: {}
  template:
    metadata:
      labels:
        app: semsearch-ui
    spec:
      containers: 
        - image: nginx:alpine 
          name: web-server 
          resources: 
            requests:
              memory: "1024Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "250m"
          volumeMounts: 
            - name: git-repo 
              mountPath: /usr/share/nginx/html 
              subPath: apps/semsearch/search_ui/semsearch_ui_deployment
              readOnly: true 
          ports: 
            - containerPort: 80 
              protocol: TCP 
      volumes:
        - name: git-repo
          emptyDir: {}
