apps/semsearch/deployment/semsearch-ui-pod.yaml
apiVersion: v1 
kind: Pod 
metadata: 
  labels:
    app: semsearch-ui
  name: semsearch-ui 
  namespace: semsearch
spec: 
  containers: 
  - image: nginx:alpine 
    name: web-server 
    resources: {}
    volumeMounts: 
    - name: git-repo 
      mountPath: /usr/share/nginx/html 
      subPath: apps/semsearch/search_ui/semsearch_ui_deployment
      readOnly: true 
    ports: 
    - containerPort: 80 
      protocol: TCP 
  #volumes: -- gitRepo is deprecated
  #- name: html 
  #  gitRepo: 
  #    repository: https://github.com/arylwen/mlk8s.git 
  #    revision: master 
  #    directory: apps/semsearch/search_ui/semsearch_ui_deployment
  volumes:
  - name: git-repo
    emptyDir: {}
