apps/semsearch/deployment/semsearch-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: semsearch-clip-milvus-redis-pg
  name: semsearch-clip-milvus-redis-pg
  namespace: semsearch
spec:
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: semsearch-clip-milvus-redis-pg
  type: NodePort
status:
  loadBalancer: {}
